Update link urls

--- a/src/ubuntu-frame.html
+++ b/src/ubuntu-frame.html
@@ -141,7 +141,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     <div class="col-7">
       <h2>Designed for enhanced security</h2>
       <p>Thanks to Ubuntu Frame's own secure socket, applications can only talk exclusively to the Ubuntu Frame server. This reduces attack vectors since there is no inter-process communication to be snooped on by malicious code.</p>
-      <p><a href="https://ubuntu.com/core" class="p-link--external">Learn more about snaps security in this independent cybersecurity evaluation</a></p>
+      <p><a href="https://ubuntu.com/engage/ubuntu-core-security-audit" class="p-link--external">Learn more about snaps security in this independent cybersecurity evaluation</a></p>
     </div>
     <div class="col-5 u-hide--small u-align--center">
       <img  src="https://assets.ubuntu.com/v1/9c80823b-confinement.svg" alt="confinement" width="263" height="150" loading="lazy"/>
@@ -189,7 +189,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
       <div>
         <h2>Need help?</h2>
         <p>Let’s get your device faster to market</p>
-        <p><a href="https://ubuntu.com/internet-of-things/digital-signage" class="p-button--positive">Contact us</a></p>
+        <p><a href="https://ubuntu.com/internet-of-things/digital-signage#get-in-touch" class="p-button--positive">Contact us</a></p>
       </div>
     </div>
   </div>
