Make suggested changes

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
       <h2>What is Mir?</h2>
       <p class="p-heading--4">Introducing a secure display server for IoT devices</p>
       <p>Mir is a system-level component that can be used to unlock next-generation user experiences. It runs on a range of Linux powered devices including traditional desktops, IoT and embedded products. Mir is a replacement for the X window server system, commonly used on Linux desktop devices. It allows device makers and desktop users to have a well-defined, efficient, flexible, and secure platform for their graphical environment.</p>
-      <p><a href="https://ubuntu.com/engage/build-smart-devices-with-mir-whitepaper" class="p-button--positive"><span class="">Download the whitepaper</span></a></p>
+      <p><a href="https://ubuntu.com/engage/build-smart-devices-with-mir-whitepaper" class="p-button--positive"><span>Download the whitepaper</span></a></p>
     </div>
     <div class="col-3 col-medium-2 u-hide--small u-align--center u-vertically-center">
       <img src="https://assets.ubuntu.com/v1/8c0acddd-Mir.svg" alt="Mir Server wordmark" width="400"/>
@@ -44,21 +44,21 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
         <a class="p-card__link-title" href="https://mir-server.io/doc/"><img class="p-card__thumbnail" src="https://assets.ubuntu.com/v1/8c0acddd-Mir.svg" alt="Mir Server wordmark"/></a>
         <hr class="u-sv1">
       <div class="p-card--content">
-        <p><a class="" href="https://mir-server.io/doc/">Mir</a> is a library for writing graphical shells for GNU/Linux and similar operating systems. It incorporates much of what traditionally requires multiple components: a window manager, a compositor and a display server.</p>
+        <p><a href="https://mir-server.io/doc/">Mir</a> is a library for writing graphical shells for GNU/Linux and similar operating systems. It incorporates much of what traditionally requires multiple components: a window manager, a compositor and a display server.</p>
       </div>
     </div>
     <div class="col-4 p-card">
       <a class="p-card__link-title" href="https://snapcraft.io/ubuntu-frame"><img class="p-card__thumbnail" src="https://assets.ubuntu.com/v1/79e5a4c2-Ubuntu+Frame.svg" alt="Ubuntu Frame wordmark"/></a>
       <hr class="u-sv1">
       <div class="p-card--content">
-        <p><a class="" href="https://snapcraft.io/ubuntu-frame">Ubuntu Frame</a> is a fullscreen shell for edge devices. Whether you are building a kiosk, point of sale, IoT device or any other product that requires a graphical output or display to the user, Ubuntu Frame instantly allows your device to run a fullscreen window. </p>
+        <p><a href="https://snapcraft.io/ubuntu-frame">Ubuntu Frame</a> is a fullscreen shell for edge devices. Whether you are building a kiosk, point of sale, IoT device or any other product that requires a graphical output or display to the user, Ubuntu Frame instantly allows your device to run a fullscreen window. </p>
       </div>
     </div>
     <div class="col-4 p-card">
       <a class="p-card__link-title" href="https://snapcraft.io/egmde"><img class="p-card__thumbnail" src="https://assets.ubuntu.com/v1/c01b1a65-egmde.svg" alt="egme wordmark"/></a>
       <hr class="u-sv1">
       <div class="p-card--content">
-        <p><a class="" href="https://snapcraft.io/egmde">egmde</a> is a lightweight, basic, usable graphical shell, for desktop environments. This basic shell includes several keyboard shortcuts and optional support for workspaces and shell components.</p>
+        <p><a href="https://snapcraft.io/egmde">egmde</a> is a lightweight, basic, usable graphical shell, for desktop environments. This basic shell includes several keyboard shortcuts and optional support for workspaces and shell components.</p>
       </div>
     </div>
   </div>
@@ -178,7 +178,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
   </div>
   <div class="u-fixed-width">
     <p class="u-float-right">
-      <a class="" href="https://discourse.ubuntu.com/t/mir-graphics-support/13185">More information about Mir graphic support&nbsp;›</a>
+      <a href="https://discourse.ubuntu.com/t/mir-graphics-support/13185">More information about Mir graphic support&nbsp;›</a>
     </p>
   </div>
 </section>
@@ -216,7 +216,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
           <h3 class="p-heading-icon__title">Code</h3>
         </div>
         <p>Get Mir or contribute to its development.</p>
-        <p><a class="" href="https://github.com/MirServer/mir">Mir on GitHub</a></p>
+        <p><a href="https://github.com/MirServer/mir">Mir on GitHub</a></p>
       </div>
     </div>
     <div class="col-6 p-divider__block">
@@ -226,8 +226,8 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
           <h3 class="p-heading-icon__title">Community</h3>
         </div>
         <p>Get connected.</p>
-        <p><a class="" href="https://community.ubuntu.com/c/mir">Mir in the Ubuntu Community forum</a></p>
-        <p><a class="" href="https://web.libera.chat/?channels=#mir-server">#mir-server on Libera Chat</a></p>
+        <p><a href="https://community.ubuntu.com/c/mir">Mir in the Ubuntu Community forum</a></p>
+        <p><a href="https://web.libera.chat/?channels=#mir-server">#mir-server on Libera Chat</a></p>
       </div>
     </div>
   </div>
