--- a/src/tutorials/index.html
+++ b/src/tutorials/index.html
@@ -13,7 +13,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
   <div class="row u-equal-height">
     <div class="col-4 p-card--featured">
       <div>
-        <h3 class="p-heading--4"><a class="" href="https://ubuntu.com/blog/creating-graphical-shells-try-mir-in-a-virtual-machine">Creating Graphical Shells – Try Mir in a Virtual Machine</a></h3>
+        <h3 class="p-heading--4"><a href="https://ubuntu.com/blog/creating-graphical-shells-try-mir-in-a-virtual-machine">Creating Graphical Shells – Try Mir in a Virtual Machine</a></h3>
         <p>
           A guide for running Mir in virtual machines using Multipass. This “Mir-demos” virtual machine tutorial allows you to try some of the graphical shells that can be built with Mir. These range from a desktop environment for a desktop computer to a single fullscreen application for embedded systems.
         </p>
@@ -25,7 +25,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
 
     <div class="col-4 p-card--featured">
       <div>
-        <h3 class="p-heading--4"><a class="" href="https://ubuntu.com/tutorials/wayland-kiosk#1-overview">How to create graphical snaps for IoT devices on top of a Wayland stack</a></h3>
+        <h3 class="p-heading--4"><a href="https://ubuntu.com/tutorials/wayland-kiosk#1-overview">How to create graphical snaps for IoT devices on top of a Wayland stack</a></h3>
         <p>
           A guide on how to create graphical snaps for Ubuntu with a single GUI application running fullscreen on the display.
 
@@ -37,7 +37,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
     </div>
     <div class="col-4 p-card--featured">
       <div>
-        <h3 class="p-heading--4"><a class="" href="https://tutorials.ubuntu.com/tutorial/graphical-snaps-xwayland#0">How to create graphical snaps for IoT devices on top of an Xwayland stack</a></h3>
+        <h3 class="p-heading--4"><a href="https://tutorials.ubuntu.com/tutorial/graphical-snaps-xwayland#0">How to create graphical snaps for IoT devices on top of an Xwayland stack</a></h3>
         <p>
           A guide on how to create graphical snaps for Ubuntu with a single GUI application running fullscreen on the display.
         </p>
@@ -52,7 +52,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
   <div class="row u-equal-height">
     <div class="col-4 p-card--featured">
       <div>
-        <h3 class="p-heading--4"><a class="" href="https://discourse.ubuntu.com/t/howto-run-your-kiosk-snap-on-your-desktop/11180">How to run your kiosk snap on your desktop</a></h3>
+        <h3 class="p-heading--4"><a href="https://discourse.ubuntu.com/t/howto-run-your-kiosk-snap-on-your-desktop/11180">How to run your kiosk snap on your desktop</a></h3>
         <p>
           A guide for developers to develop their Mir-kiosk applications working on Ubuntu desktop. Learn how to simply have Mir-kiosk running on a window on your desktop, before going to your device.
         </p>
@@ -63,7 +63,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
     </div>
     <div class="col-4 p-card--featured">
       <div>
-        <h3 class="p-heading--4"><a class="" href="https://forum.snapcraft.io/t/debugging-graphical-apps-on-ubuntu-core/23671">Debugging Graphical Apps on Ubuntu Core</a></h3>
+        <h3 class="p-heading--4"><a href="https://forum.snapcraft.io/t/debugging-graphical-apps-on-ubuntu-core/23671">Debugging Graphical Apps on Ubuntu Core</a></h3>
         <p>
           A guide to run graphical snaps (such as Flutter apps). The tutorial will take you through installing an Ubuntu Core virtual machine to download and test a snap such that you can easily modify and debug it.
         </p>
@@ -74,7 +74,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
     </div>
     <div class="col-4 p-card--featured">
       <div>
-        <h3 class="p-heading--4"><a class="" href="https://tutorials.ubuntu.com/tutorial/graphical-snaps#0">How to build a digital signage app for embedded displays</a></h3>
+        <h3 class="p-heading--4"><a href="https://tutorials.ubuntu.com/tutorial/graphical-snaps#0">How to build a digital signage app for embedded displays</a></h3>
         <p>
           A guide to creating graphical snaps for Ubuntu IoT devices on top of an Xwayland stack. Learn how to build a digital signage app for kiosks, advertising screens and other embedded displays.
         </p>
@@ -96,7 +96,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
       <div class="blog-p-card__content">
         <h3 class="p-heading--4">Mir Kiosk</h3>
         <p>
-          <a class="" href="https://community.ubuntu.com/t/mir-kiosk-a-project-that-uses-mir/">
+          <a href="https://community.ubuntu.com/t/mir-kiosk-a-project-that-uses-mir/">
             A graphical output or display for everything from washing machines to smart thermostats&nbsp;›
           </a>
         </p>
@@ -106,7 +106,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
       <div class="blog-p-card__content">
         <h3 class="p-heading--4">Unity8</h3>
         <p>
-          <a class="" href="https://community.ubuntu.com/t/unity8-a-project-that-uses-mir/">
+          <a href="https://community.ubuntu.com/t/unity8-a-project-that-uses-mir/">
             A graphical shell that targets a range of devices including phones, tablets, laptops and desktops&nbsp;›
           </a>
         </p>
@@ -116,7 +116,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
       <div class="blog-p-card__content">
         <h3 class="p-heading--4">Mir-kiosk snap</h3>
         <p>
-          <a class="" href="https://developer.ubuntu.com/core/examples/snaps-on-mir">
+          <a href="https://developer.ubuntu.com/core/examples/snaps-on-mir">
             How to build a kiosk-style device with Mir and Ubuntu Core&nbsp;›
           </a>
         </p>
@@ -126,7 +126,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
       <div class="blog-p-card__content">
         <h3 class="p-heading--4">Mir Desktop Environment</h3>
         <p>
-          <a class="" href="https://community.ubuntu.com/t/egmde-a-project-that-uses-mir/7129">
+          <a href="https://community.ubuntu.com/t/egmde-a-project-that-uses-mir/7129">
             Egmde is a simple desktop shell that uses Mir&nbsp;›
           </a>
         </p>
@@ -136,7 +136,7 @@ metadata: Mir is the fast, open and secure display server to unlock next-generat
       <div class="blog-p-card__content">
         <h3 class="p-heading--4">Ubuntu Core Kiosk</h3>
         <p>
-          <a class="" href="https://ubuntu.com/tutorials/ubuntu-core-preparing-a-virtual-machine-with-graphics-support#1-overview">
+          <a href="https://ubuntu.com/tutorials/ubuntu-core-preparing-a-virtual-machine-with-graphics-support#1-overview">
             Preparing a virtual machine with graphics support&nbsp;›
           </a>
         </p>
