--- a/src/ubuntu-frame.html
+++ b/src/ubuntu-frame.html
@@ -103,7 +103,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
 </section>
 <section class="p-strip--light">
   <div class="row u-vertically-center">
-    <div class="col-5 col-medium-2 u-hide--smallu-align--center">
+    <div class="col-5 col-medium-2 u-hide--small u-align--center">
       <img src="https://assets.ubuntu.com/v1/e6c4d858-Mir-easy-setup.svg" alt="Simplified development" width="300" height="240" loading="lazy" />
     </div>
     <div class="col-7 col-medium-4">
