update /ubuntu-frame copy

--- a/src/ubuntu-frame.html
+++ b/src/ubuntu-frame.html
@@ -9,9 +9,10 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
 <section class="p-strip--hero__new is-deep">
   <div class="row p-strip--hero__row">
     <div class="col-7">
-      <h1>A secure and long term supported display server for embedded devices</h1>
-      <p>Ubuntu Frame is a reliable and secure fullscreen shell to power any embedded display. Simple to configure, simple to deploy.</p>
+      <h1>Simplify the development of embedded displays</h1>
+      <p>Ubuntu Frame is a reliable and secure display server for embedded Linux devices with long term support. Simple to configure, simple to deploy.</p>
       <p><a href="https://assets.ubuntu.com/v1/713b9224-Ubuntu.Frame.Datasheet.pdf" class="p-button--positive">Get the Ubuntu Frame datasheet</a></p>
+      <p><a class="p-link--inverted" href="https://ubuntu.com/engage/Embedding_IoT_GUI_with_Ubuntu_Frame">Learn how to develop GUIs for IoT with our developer guide&nbsp;&rsaquo;</a></p>
     </div>
   </div>
 </section>
@@ -19,7 +20,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
   <div class="row u-vertically-center">
     <div class="col-6">
       <h2>The foundation for embedded graphical display implementations</h2>
-      <p>Ubuntu Frame is Canonical's fullscreen shell for edge devices that provides all you need for the foundation of your graphical implementation. Whether you are building an interactive kiosk, a digital signage solution or any other product that requires a graphical output, Ubuntu Frame instantly allows your device to run your fullscreen application.</p>
+      <p>Ubuntu Frame streamlines the build and development of products that need graphical output. Ubuntu Frame bundles communication protocols, input protocols, and security policies into a single kit, which can then be used in embedded devices. Whether you are building an interactive kiosk, a digital signage solution or any other product that requires a graphical output, Ubuntu Frame instantly allows your device to run your fullscreen application.</p>
     </div>
     <div class="col-6 u-hide--small u-hide--medium u-align--center">
       <img src="https://assets.ubuntu.com/v1/79e5a4c2-Ubuntu+Frame.svg" alt="Ubuntu frame" style="height: 48px; width: 358px;">
@@ -94,7 +95,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
   <div class="row u-vertically-center">
     <div class="col-7 col-medium-4">
       <h2>More time for innovation</h2>
-      <p>Frame automatically enables input from touch, keyboard and mouse, windows behaviours and dynamics, and provides secure client-server communications. This gives you time to work on your graphic application.</p>
+      <p>Out-of-the-box, Ubuntu Frame automatically enables all that you need to deploy embedded graphic applications, including input modalities, windows behaviours and dynamics, and secure client-server communications. Less integration and maintenance challenges, more time to work on your graphic application.</p>
     </div>
     <div class="col-5 col-medium-2 u-hide--small u-align--center">
       <img src="https://assets.ubuntu.com/v1/6d8a72cb-Agile+development.svg" alt="More time for innovation" width="175" height="150" loading="lazy"/>
@@ -108,7 +109,8 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     </div>
     <div class="col-7 col-medium-4">
       <h2>Simplified development</h2>
-      <p>With Ubuntu Frame, installing the full graphical stack is as simple as one single command thanks to Snaps, the next-generation package format for Linux. In addition, benefit from enhanced features built-in such as automatic updates or rollback on failure.</p>
+      <p>Stop adding a dedicated board and mobile OS just for your display. Reduce integration complexity, costs and security vulnerabilities with a solution that perfectly matches your underlying architecture. With Ubuntu Frame, installing the full graphical stack in your embedded Linux device is as simple as one single command.</p>
+      <p><a href="https://ubuntu.com/engage/Embedding_IoT_GUI_with_Ubuntu_Frame">Learn how to develop GUIs for IoT with our developer guide</a></p>
     </div>
   </div>
 </section>
