Copy update on /ubuntu-frame

--- a/src/ubuntu-frame.html
+++ b/src/ubuntu-frame.html
@@ -87,7 +87,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
         <li class="p-list__item is-ticked">Tutorials</li>
         <li class="p-list__item is-ticked">Answers to frequently asked questions</li>
       </ul>
-      <p><a href="https://assets.ubuntu.com/v1/713b9224-Ubuntu.Frame.Datasheet.pdf" class="p-button">Download the datasheet</a></p>
+      <p><a href="https://ubuntu.com/engage/Embedding_IoT_GUI_with_Ubuntu_Frame" class="p-button">Download the Developer Guide</a></p>
     </div>
   </div>
 </section>
@@ -110,7 +110,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     <div class="col-7 col-medium-4">
       <h2>Simplified development</h2>
       <p>Stop adding a dedicated board and mobile OS just for your display. Reduce integration complexity, costs and security vulnerabilities with a solution that perfectly matches your underlying architecture. With Ubuntu Frame, installing the full graphical stack in your embedded Linux device is as simple as one single command.</p>
-      <p><a href="https://ubuntu.com/engage/Embedding_IoT_GUI_with_Ubuntu_Frame">Learn how to develop GUIs for IoT with our developer guide</a></p>
+      <p><a href="https://ubuntu.com/engage/Embedding_IoT_GUI_with_Ubuntu_Frame">Learn how to develop GUIs for IoT with our developer guide&nbsp;&rsaquo;</a></p>
     </div>
   </div>
 </section>
@@ -133,7 +133,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     <div class="col-7 col-medium-4">
       <h2>Supported for your device lifetime</h2>
       <p>When used in conjunction with Ubuntu Core, the OS tailored for the IoT, Ubuntu Frame comes with 10 years of security updates.</p>
-      <p>Learn more about <a href="https://ubuntu.com/core">Ubuntu Core</a></p>
+      <p>Learn more about <a href="https://ubuntu.com/core">Ubuntu Core&nbsp;&rsaquo;</a></p>
     </div>
   </div>
 </section>
@@ -142,7 +142,7 @@ metadata: Ubuntu Frame is the foundation for any embedded graphical display impl
     <div class="col-7">
       <h2>Designed for enhanced security</h2>
       <p>Thanks to Ubuntu Frame's own secure socket, applications can only talk exclusively to the Ubuntu Frame server. This reduces attack vectors since there is no inter-process communication to be snooped on by malicious code.</p>
-      <p><a href="https://ubuntu.com/engage/ubuntu-core-security-audit">Learn more about snaps security in this independent cybersecurity evaluation</a></p>
+      <p><a href="https://ubuntu.com/engage/ubuntu-core-security-audit">Learn more about snaps security in this independent cybersecurity evaluation&nbsp;&rsaquo;</a></p>
     </div>
     <div class="col-5 u-hide--small u-hide--medium u-align--center">
       <img src="https://assets.ubuntu.com/v1/9c80823b-confinement.svg" alt="confinement" width="263" height="150" loading="lazy"/>
